chore: upgrade clarity version in config

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -7,8 +7,8 @@ cache_dir = '.\.cache'
 requirements = []
 [contracts.LeBaguette]
 path = 'contracts/LeBaguette.clar'
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = "3.3"
 [repl.analysis]
 passes = ['check_checker']
 
