fix: remove as-contract usage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hirosystems/chainhooks-client": "^1.0.0",
+    "@stacks/connect": "^8.2.4",
+    "@stacks/network": "^7.3.1",
+    "@stacks/transactions": "^7.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
