--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@stacks/connect": "^8.2.4",
     "@stacks/network": "^7.3.1",
     "@stacks/transactions": "^7.3.1",
+    "@walletconnect/web3wallet": "^1.16.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
